--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@
     padding:0;
     box-sizing: border-box;
 }
+body{
+    background-color:black;
+}
 canvas{
     border: 1px solid black;
     background-color: black;
